syntax = "proto3";
package chat;

import "user.proto";

service ChatService {
  rpc PostLobbyChatMessage (ChatMessageRequest) returns (PostChatMessageResult);
  rpc PostGameChatMessage (ChatMessageRequest) returns (PostChatMessageResult);
  rpc GetMessages (Empty) returns (ChatMessageList);
}

message Empty {}

message ChatMessageRequest {
  string userId = 1;
  string message = 2;
  string username = 3;
  string picture = 4;
}

message PostChatMessageResult {
  string id = 1;
}

message ChatMessage {
  string id = 1;
  string userId = 2;
  string message = 3;
  string timestamp = 4;
  string createDate = 5;
  string updateDate = 6;
  user.UserDTO user = 7;
}

message ChatMessageList {
  repeated ChatMessage messages = 1;
}
